# sparql-ml.eu

./: README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: .pages  contact.md  deliverables.md  index.md  overview.md  partner.md  partners.md  workplan.md
docs/assets/: SPARQL_ML_Deliverable_D2_1.pdf.gpg  SPARQL_ML_Deliverable_D6_2.pdf.gpg
