[tool.poetry]
name = "2023-d2r2-aksw-org"
version = "0.0.0"
description = "Webpage of the 2023 D2R2 Workshop"
authors = ["Sebastian Tramp <sebastian.tramp@eccenca.com>"]
homepage = "https://github.com/aksw/2023.d2r2.aksw.org"
readme = "README.md"
packages = [{include = "tools"}]


[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^10.2.0"
CairoSVG = "^2.7.1"
mkdocs = "^1.5.3"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-glightbox = "^0.3.7"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-autolinks-plugin = "^0.7.1"
mkdocs-redirects = "^1.2.1"
mkdocs-swagger-ui-tag = "^0.6.9"
mkdocs-material = "9.5.17"
pymdown-extensions = "^10.7.1"

[tool.poetry.group.dev.dependencies]
linkcheckmd = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

