[tool.poetry]
name = "sparql-ml-eu"
version = "0.0.0"
description = "Webpage of the SPARQL-ML Project"
authors = ["Sebastian Tramp <sebastian.tramp@eccenca.com>"]
homepage = "https://github.com/SPARQL-ML/sparql-ml.eu"
readme = "README.md"
packages = [{include = "tools"}]


[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^10.4.0"
CairoSVG = "^2.7.1"
mkdocs = "^1.5.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.7"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-glightbox = "^0.4.0"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-autolinks-plugin = "^0.7.1"
mkdocs-redirects = "^1.2.1"
mkdocs-material = "9.5.33"
pymdown-extensions = "^10.9"

[tool.poetry.group.dev.dependencies]
linkcheckmd = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

